--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ JWT_EXPIRES=5
 
 APP_VERSION=1
 
-DB_USER=ejm
-DB_PASSWORD=ejmuserpassword
-DB_NAME=ejm
-DB_HOST=103.82.242.180
+DB_USER=postgres
+DB_PASSWORD=user3321
+DB_NAME=tes
+DB_HOST=localhost
 DB_PORT=5432
 
 REDIS_HOST=localhost
@@ -24,8 +24,8 @@ REDIS_DATABASE=0
 REDIS_USERNAME=sinotif
 REDIS_PASSWORD=SinotifDev
 
-DB_USER=tkd
-DB_PASSWORD=j0a0w3Ed91VMEomJ5F
-DB_NAME=assessment_prod
-DB_HOST=202.157.177.80
-DB_PORT=5432
+# DB_USER=tkd
+# DB_PASSWORD=j0a0w3Ed91VMEomJ5F
+# DB_NAME=assessment_prod
+# DB_HOST=202.157.177.80
+# DB_PORT=5432
