--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ JWT_EXPIRES=5
 APP_VERSION=1
 
 DB_USER=postgres
-DB_PASSWORD=user3321
-DB_NAME=tes
+DB_PASSWORD=admin
+DB_NAME=test
 DB_HOST=localhost
 DB_PORT=5432
 
@@ -23,9 +23,3 @@ REDIS_PORT=6379
 REDIS_DATABASE=0
 REDIS_USERNAME=sinotif
 REDIS_PASSWORD=SinotifDev
-
-# DB_USER=tkd
-# DB_PASSWORD=j0a0w3Ed91VMEomJ5F
-# DB_NAME=assessment_prod
-# DB_HOST=202.157.177.80
-# DB_PORT=5432
