--- a/.env
+++ b/.env
@@ -5,21 +5,21 @@ APP_DEBUG=true
 APP_HOST=localhost
 APP_PORT=1440
 APP_STATE=db
-APP_DIRECTORY=C:/Users/FATIHUL/Documents/pribadi/CTDI-Assesment/assessment-be
+APP_DIRECTORY=
 
 JWT_KEY=QmVQcm9w2Z3XI=
 JWT_EXPIRES=5
 
 APP_VERSION=1
 
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_NAME=test
-DB_HOST=localhost
+DB_USER=ejm
+DB_PASSWORD=ejmuserpassword
+DB_NAME=ejm
+DB_HOST=103.82.242.180
 DB_PORT=5432
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DATABASE=0
-REDIS_USERNAME=sinotif
-REDIS_PASSWORD=SinotifDev
+REDIS_USERNAME=ejm
+REDIS_PASSWORD=EjmDev
