--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ JWT_EXPIRES=5
 APP_VERSION=1
 
 DB_USER=postgres
-DB_PASSWORD=admin
-DB_NAME=test
+DB_PASSWORD=15
+DB_NAME=ejm_new
 DB_HOST=localhost
 DB_PORT=5432
 
