--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ JWT_EXPIRES=5
 
 APP_VERSION=1
 
-DB_USER=postgres
-DB_PASSWORD=15
-DB_NAME=ejm_new
-DB_HOST=localhost
+DB_USER=ejm
+DB_PASSWORD=ejmuserpassword
+DB_NAME=ejm
+DB_HOST=103.82.242.180
 DB_PORT=5432
 
 REDIS_HOST=localhost
