--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ENV=development
 
 APP_VERSION=1
 APP_DEBUG=true
-APP_HOST=localhost
+APP_HOST=192.168.1.50
 APP_PORT=1440
 APP_STATE=db
 APP_DIRECTORY=
@@ -13,7 +13,7 @@ JWT_EXPIRES=5
 APP_VERSION=1
 
 DB_USER=postgres
-DB_PASSWORD=15
+DB_PASSWORD=kail0858
 DB_NAME=ejm_new
 DB_HOST=localhost
 DB_PORT=5432
